# systembolaget-scraper

./: .env.example  .gitignore  Cargo.toml  README.md  products.md
src/: main.rs  systembolaget.rs  utils.rs
src/database/: database.rs  models.rs
src/tests/: mod.rs  systembolaget_model.rs
