[package]
name = "systembolaget-scrape"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.22"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite" ] }
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.3"